control important params from config.yaml

--- a/config.yaml
+++ b/config.yaml
@@ -13,7 +13,12 @@ GENOME_GZI: gs://seq-resources/NCBI-hg38/hg38.fa.gz.gzi
 GENOME_BL: gs://seq-resources/NCBI-hg38/ENCFF419RSJ.bed.gz
 GENOME_SIZE: 2.7e9
 GENOME_CHR: chr1,chr2,chr3,chr4,chr5,chr6,chr7,chr8,chr9,chr10,chr11,chr12,chr13,chr14,chr15,chr16,chr17,chr18,chr19,chr20,chr21,chr22,chrX
-
+PYDNASE_PVAL: -3
+BT2_TRIM_SIZE: 30
+BT2_MAX_ISIZE: 800
+MACS2_SHIFT_SIZE: -100
+MACS2_EXTENSION: 200
+MAPQ_CUTOFF: 30
 
 
 samples:
